2003-01-30  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager-store: Show user IDs instead of subkeys
	* seahorse-key-store: ::append_column returns the column,
	::init makes NAME column sortable

2003-01-29  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-add-subkey: Added
	* seahorse-key-manager: Added patch from Jose to do about dialog
	* src/dialogs/about.glade2: Removed
	* seahorse-key-properties: Updated for add-subkey
	* seahorse-passphrase: Bug fix since cannot use r_hd for cleanup
	* seahorse-ops-key: Changed DSA_MIN to 768

2003-01-28  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-add-uid: Strings changes to be consistent with generate

2003-01-27  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties:
	* seahorse-generate:
	String changes so more consistent
	* seahorse-ops-key: Added ::add_subkey
	* seahorse-key: Added SKEY_CHANGE_SUBKEYS

2003-01-26  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Made ::key_changed more efficient; comments

2003-01-25  Jose Carlos Garcia Sogo  <jsogo@debian.org>

	* configure.in: Check for GnuPG 1.2

2003-01-25  Jacob Perkins <jap1@users.sourceforge.net>

	* seahorse-signer-menu: Replaces key-menu, does all signer handling
	for preferences
	* seahorse-signer-menu-item: Replaces key-menu-item, handles key
	signals for signer-menu
	* seahorse-key-menu:
	* seahorse-key-menu-item:
	Removed
	* seahorse-preferences: Updated to use signer-menu
	* data/Makefile.am: Patch from Gregory Leblanc so schema installation
	is optional
	* seahorse-key-store: Set NAME column to allow sorting and sort at start

2003-01-24  Bastien Nocera  <hadess@hadess.net>

	* src/dialogs/seahorse-add-uid.glade2:
	* src/dialogs/seahorse-export.glade2:
	* src/dialogs/seahorse-generate.glade2:
	* src/dialogs/seahorse-import.glade2:
	* src/dialogs/seahorse-preferences.glade2:
	* src/dialogs/seahorse-recipients.glade2:
	* src/dialogs/seahorse-signatures.glade2: