@@ -1,8 +1,11 @@
 2003-01-30  Jacob Perkins  <jap1@users.sourceforge.net>
 
-	* seahorse-key-manager-store: Show user IDs instead of subkeys
+	* seahorse-key-manager-store: Show user IDs instead of subkeys,
+	listen to SKEY_CHANGE_UIDS & refresh
 	* seahorse-key-store: ::append_column returns the column,
 	::init makes NAME column sortable
+	* seahorse-ops-key: ::add_subkey fixups, added ::del_subkey
+	* seahorse-key-properties: Updated to do subkey deletion
 
 2003-01-29  Jacob Perkins  <jap1@users.sourceforge.net>
 
